operadores de arreglos

--- a/01-http/02-servidor-web-nodejs/api-web/views/inicio.ejs
+++ b/01-http/02-servidor-web-nodejs/api-web/views/inicio.ejs
@@ -16,3 +16,34 @@ if(true){
 }else{
     console.log('Falso)
 }
+//impriman en consola todos los elementos}
+
+const arregloNumeroForEach = [1,2,3,4,5,6];
+const rForEach= arregloNumeroForEach.forEach(
+function(Valoractual)
+{
+    console.log(`Valor: ${Valoractual}`)
+}
+const rMap= arreglomap. map(
+ (valorActual)=>{
+    const esPar= valorActual%2==0;
+
+}
+
+const rFind= arregloNumerosFind.
+find(
+    (valorActual)=>{
+    
+    }
+)
+)
+//sumen 2 a los pares y 1 a los impares
+//encuentre si hay el numero cuatro
+//filtras numero menores a 5
+// Todos los valores positivos
+//algun valor es menor a 2
+//restar todos los valores de 100
+
+//1.1sumen 10 a todos
+//filtrar mayores a 15
+//Si hay algún numero mayor a 30
