--- a/01-http/02-servidor-web-nodejs/api-web/views/peliculas/inicio.ejs
+++ b/01-http/02-servidor-web-nodejs/api-web/views/peliculas/inicio.ejs
@@ -41,5 +41,29 @@
         <label for="nombre">input</label>
         <input id="nombre" type="text">
         <button>Enviar datos</button>
+
+
+        <br>
+        <br>
+        <br>
+        <style>
+            table, td, th{
+                border: solid black 1px;
+            }
+        </style>
+        <table>
+            <tr>
+                <th>nombres</th>
+                <th>apellidos</th>
+            </tr>
+            <tr>
+                <td>Jenny Sofía</td>
+                <td>Guerrero Burbano</td>
+            </tr>
+        </table>
+        <iframe src="https://saew.epn.edu.ec" frameborder="0"></iframe>
+        <div>
+            <legend>Hola Sofiii Att:Sofi</legend>
+        </div>
     </body>
 </html>
