--- a/01-http/02-servidor-web-nodejs/api-web/views/peliculas/estilos.ejs
+++ b/01-http/02-servidor-web-nodejs/api-web/views/peliculas/estilos.ejs
@@ -6,10 +6,13 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
     <style>
         h2,p, div{
-            color: aquamarine;
-            background-color: #c6ff72;
+            color: #40001c;
+            background-color: #ffd8d8;
+            border-style: dot-dash;
         }
         .verde{
             color: turquoise;
@@ -18,10 +21,7 @@
         #adios{
             color: blue;
         }
-       p{
-            color: #fff82a;
-            background-color: #200eff;
-        }
+
         .morada{
             color: deeppink;
         }
@@ -41,20 +41,108 @@
             color: black;
             background-color: beige;
         }
+        .modelo-cajas{
+            border-color: red;
+
+
+        }
+        .separador{
+            margin-top: 200px;
+            margin-bottom: 200px;
+            background-color: aquamarine;
+        }
+        table{
+            width: 900px;
+        }
+        tr{
+            border-color: black;
+            border-bottom: brown;
+        }
 
 
     </style>
 </head>
 <body>
-    <h1>Hola</h1>
-    <h1 id="adios" class="verde" >Adios</h1>
-    <h1 class="verde" style="color: red">Bienvenidos</h1>
-    <p>Barcelona</p>
-    <div>liga</div>
-    <h2>Emelec</h2>
-<p class="verde azul morada">HOLA MUNDO</p>
-<div class="verde">VERDE UNO</div>
-<p class="verde"> VERDE DOS</p>
-    <p class="verde azul"> VERDE DOS</p>
+<div>
+    <div class="row">
+
+        <div class="col-sm-2">
+            <h1>logo</h1>
+        </div>
+        <div class="col-sm-6">
+            <h1>menu</h1>
+        </div>
+        <div class="col-sm-4">
+            <h1>login</h1>
+        </div>
+        <div class="col-sm-6">
+            <h1>sm</h1>
+        </div>
+<!--        <div class="col-sm-6"><h1>sm</h1></div>-->
+<!--        <div class="col-md-6"><h1>md</h1></div>-->
+<!--        <div class="col-md-6"><h1>md</h1></div>-->
+<!--        <div class="col-lg-6"><h1>lg</h1></div>-->
+<!--        <div class="col-lg-6"><h1>lg</h1></div>-->
+    </div>
+    <div class="row">
+        <div class="col-sm-3">
+            <h1>Género de películas</h1>
+            <table style="width: 400px">
+                <tr>
+                    <td>
+                        i
+                    </td>
+                    <td>
+                        Accion
+                    </td>
+                    <td>
+                        824
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        i
+                    </td>
+                    <td>
+                        Accion
+                    </td>
+                    <td>
+                        856
+                    </td>
+
+                </tr>
+            </table>
+        </div>
+        <div class="col-sm 9">
+            <h1>Películas online</h1>
+            <p>Pelisplus.co es un sitio ideal para ver películas y series online. Nuestro sistema se preocupa por tener lo último del cine en calidad full HD.
+
+                Para ver una película o serie de televisión puedes usar el buscador en la parte superior o seguir uno de los enlaces de genero o año de estreno en la parte izquierda del sitio, luego el enlace te llevará al reproductor donde solo tienes que dar click en el boton de play. Te invitamos a compartir este genial sitio con tus amigos y familiares</p>
+            <div class="col-sm-6">
+                <h1>Peli1</h1>
+            </div>
+            <div class="col-sm-6">
+                <h1>peli2</h1>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+<!--<div class="separador">-->
+
+
+<!--</div>-->
+<!--    <h1>Hola</h1>-->
+<!--    <h1 id="adios" class="verde" >Adios</h1>-->
+<!--    <h1 class="verde" style="color: red">Bienvenidos</h1>-->
+<!--    <p>Barcelona</p>-->
+<!--    <div>liga</div>-->
+<!--    <h2>Emelec</h2>-->
+<!--<p class="verde azul morada">HOLA MUNDO</p>-->
+<!--<div class="verde">VERDE UNO</div>-->
+<!--<p class="verde"> VERDE DOS</p>-->
+<!--    <p class="verde azul"> VERDE DOS</p>-->
 </body>
 </html>
