--- a/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
+++ b/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
@@ -39,6 +39,12 @@
         .fila2{
             height: 45px;
             margin-top: -5px;
+            border:solid 1px #ccc;
+
+            box-shadow: 0px 5px 18px -10px #8e8e8e;
+            border-top-color: white ;
+
+
         }
         .input{
             height: 40px;
@@ -67,6 +73,19 @@
         .login{
             color: #6c6f6e;
             margin-left: 11px;
+        }
+        .fila3{
+            height: 65px;
+            margin-top: -12px;
+            background-color: #fbf4f4;
+            /*background:#ff6600;*/
+
+            height:628px;
+
+
+        }
+        .fila6{
+
         }
 
     </style>
@@ -120,6 +139,12 @@
 </div>
 
 
+<div class="fila3 text-center">
+    <h1>
+        ss
+    </h1>
+
+</div>
 
 </body>
 </html>
