--- a/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
+++ b/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
@@ -76,7 +76,7 @@
         }
         .fila3{
             height: 65px;
-            margin-top: -12px;
+            margin-top: 4px;
             background-color: #fbf4f4;
             /*background:#ff6600;*/
 
@@ -84,8 +84,112 @@
 
 
         }
-        .fila6{
+        .fila3 h1{
 
+            color: black;
+            font: bold 76px "Arial Black";
+
+        }
+        .fila3_espacio{
+            height: 85px;
+        }
+        .fila3 p{
+            font-size: 25px;
+            padding-left: 385px;
+            padding-right: 385px;
+            padding-top: 25px;
+            padding-bottom: 17px;
+        }
+        .boton1{
+            height: 65px;
+            width: 270px;
+            margin: 30px;
+            border: none;
+            background-color: #fb3e44;
+            font: bold 16px "Arial Black";
+            color: white;
+        ;
+        }
+        .boton2{
+            height: 65px;
+            width: 270px;
+            border: none;
+            background-color: white;
+            font: bold 16px "Arial Black";
+            color: black;
+        }
+        .fila4{
+            height: 628px;
+
+        }
+        .fila4 p{
+            padding-left: 350px;
+            padding-right: 350px;
+        }
+        .fila5{
+            height: 628px;
+            padding-top: 25px;
+        }
+        .fila5text{
+            padding-top: 20px;
+        }
+
+        .colum1 h5{
+            font: bold 14px "Arial Black";
+            color:#ED1C24;
+        }
+        .fila5text p{
+            padding-left: 45px;
+            padding-right: 45px;
+            padding-top: 20px;
+        }
+        .btnfila4 button{
+            margin-top: 45px;
+            font: bold 24px "Arial Black";
+            padding: 35px;
+            width: 448px;
+            background-color: black;
+            color: white;
+            box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+        }
+        .fila6{
+            margin-top: -45px;
+            font-size: 20px;
+            height: 570px;
+            background-image: url(https://static.npm.red/attachments/cjsdqox9k0kgel1beo12x4x6e-line-final.full.png), radial-gradient(rgb(88, 15, 11) 22%, rgb(18, 7, 7) 100%);
+            padding: 100px;
+            padding-left:259px;
+            padding-right: 259px;
+            color: #F1C131;
+
+        }
+        .fila6 p{
+            margin-top: 59px;
+        }
+        .botonfila6{
+            margin-top: 45px;
+            font: 20px "Arial Black";
+            padding: 15px;
+            width: 249px;
+            height: 70px;
+            border: none;
+            background-color: #F1C131;
+            color: #333;
+            box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+        }
+        .fila7{
+            height: 610px;
+            padding: 30px;
+        }
+        .fila7 h2{
+            text-decoration: underline;
+            text-decoration-color: rgba(251,82,40,.2);
+            font: bold 35px Arial;
+        }
+        .fila7 p{
+            padding-left: 210px ;
+            padding-right: 210px;
+            font: 18px Arial;
         }
 
     </style>
@@ -140,10 +244,88 @@
 
 
 <div class="fila3 text-center">
+    <div class="fila3_espacio">
+
+    </div>
     <h1>
-        ss
+        Build amazing things
     </h1>
 
+    <div class="text-center">
+        <p>
+            Essential JavaScript development tools that help you go to market faster and build powerful applications using modern open source code.
+        </p>
+    </div>
+    <div>
+        <button class="boton1">See plans</button>
+        <button class="boton2">Join for free</button>
+    </div>
+
+</div>
+<div class="fila4">
+    <div class="text-center">
+        <img  src="/imagenes/fila4.png" alt="npm word" style="height: 450px">
+    </div>
+    <div class="text-center">
+        <p>npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it. Create an Org and get more out of the tools your team already knows and loves.</p>
+    </div>
+</div>
+<div class="fila5">
+    <div class="col-md-3 text-center colum1">
+        <img  src="/imagenes/fila4img1.png" alt="npm word" style="height: 45px">
+        <h5>Zero configuration</h5>
+        <div class="text-left fila5text">
+
+            <p>
+                Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-3 text-center colum1">
+        <img  src="/imagenes/fila4img2.png" alt="npm word" style="height: 45px">
+        <h5>Zero configuration</h5>
+        <div class="text-left fila5text">
+            <p>
+                Control who has access to what modules within your team namespace using straightforward team management capabilities.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-3 text-center colum1">
+        <img  src="/imagenes/fila4img3.png" alt="npm word" style="height: 45px">
+        <h5>Zero configuration</h5>
+        <div class="text-left fila5text">
+            <p>
+                npm Orgs has 100% parity with all the public npm registry features your developers already use.
+            </p>
+        </div>
+    </div>
+    <div class="col-md-3 text-center colum1">
+        <img  src="/imagenes/fila4img4.png" alt="npm word" style="height: 45px">
+        <h5>Zero configuration</h5>
+        <div class="text-left fila5text">
+            <p>
+                Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.
+            </p>
+        </div>
+
+    </div>
+    <div class="btnfila4 text-center">
+        <button>Create an org</button>
+    </div>
+</div>
+<div class="fila6 text-center">
+    <h1>
+        npm Enterprise
+    </h1>
+    <p>You need to get quality products to market fast but you also need enterprise-grade security and compliance. Speed up development while also upgrading to the most advanced tooling in JavaScript, from the trusted authorities on JavaScript package management.</p>
+    <button class="botonfila6">Learn more -></button>
+</div>
+<div class="fila7 text-center">
+    <img  src="/imagenes/fila7.png" alt="npm word" style="height: 300px">
+    <h2>Javascript.Enterprise grade</h2>
+    <p>Bring your development under one roof, and get a handle on your company’s open source footprint with our secure, single-tenant, managed service. npm Enterprise empowers developers to do what they do best while providing you with industry-leading administrative capabilities. Reduce risk while reducing friction.
+
+    </p>
 </div>
 
 </body>
