--- a/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
+++ b/01-http/03-DeberPágina/deber-pagina/views/inicioNpm.ejs
@@ -191,6 +191,34 @@
             padding-right: 210px;
             font: 18px Arial;
         }
+        .f8colum1{
+            padding-left: 90px;
+        }
+        .btnfila8{
+            margin-top: 45px;
+            font: bold 24px "Arial Black";
+            padding: 20px;
+            width: 380px;
+            background-color: black;
+            color: white;
+            box-shadow: 8px 8px 0 rgba(128,83,35,.2);
+        }
+        .fila8 h5{
+            font: bold 18px "Arial Black";
+            color: #68120E;;
+
+        }
+        .fila8 p{
+            font-size: 20px;
+        }
+        .fila9{
+            height: 1900px;
+            background-color: #FDFBF7;
+            -webkit-clip-path: polygon(0 0,100% 0,100% 90%,50% 100%,0 90%);
+        }
+
+
+
 
     </style>
 </head>
@@ -283,7 +311,7 @@
     </div>
     <div class="col-md-3 text-center colum1">
         <img  src="/imagenes/fila4img2.png" alt="npm word" style="height: 45px">
-        <h5>Zero configuration</h5>
+        <h5>Team management</h5>
         <div class="text-left fila5text">
             <p>
                 Control who has access to what modules within your team namespace using straightforward team management capabilities.
@@ -292,7 +320,7 @@
     </div>
     <div class="col-md-3 text-center colum1">
         <img  src="/imagenes/fila4img3.png" alt="npm word" style="height: 45px">
-        <h5>Zero configuration</h5>
+        <h5>Familiar features</h5>
         <div class="text-left fila5text">
             <p>
                 npm Orgs has 100% parity with all the public npm registry features your developers already use.
@@ -301,7 +329,7 @@
     </div>
     <div class="col-md-3 text-center colum1">
         <img  src="/imagenes/fila4img4.png" alt="npm word" style="height: 45px">
-        <h5>Zero configuration</h5>
+        <h5>npm audit</h5>
         <div class="text-left fila5text">
             <p>
                 Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer.
@@ -327,6 +355,55 @@
 
     </p>
 </div>
+<div class="fila8">
+    <div class="col-md-3 text-left f8colum1">
+        <img  src="/imagenes/fila4img1.png" alt="npm word" style="height: 45px">
+        <h5>Security expertise</h5>
+        <br>
 
+        <p>
+            npm is the central authority on JavaScript security. Automatically find and fix security vulnerabilities before they ever make it into production, with nothing to set up or install.
+        </p>
+
+    </div>
+    <div class="col-md-3 text-left f8colum1">
+        <img  src="/imagenes/fila8img2.png" alt="npm word" style="height: 45px">
+        <h5>De-duplicated development</h5>
+        <br>
+        <br>
+        <p>
+            npm’s search and distribution features have revolutionized the way developers collaborate. Unlimited namespaces allow your teams to easily share and manage their code.
+        </p>
+
+    </div>
+    <div class="col-md-3 text-left f8colum1">
+        <img  src="/imagenes/fila8img3.png" alt="npm word" style="height: 45px">
+        <h5>Access control</h5>
+        <br>
+
+        <p>
+            Single sign-on gives you total control of who has access to your system, allowing you to distribute permissions in a way that matches your company structure.
+        </p>
+
+    </div>
+    <div class="col-md-3 text-left f8colum1">
+        <img  src="/imagenes/fila8img4.png" alt="npm word" style="height: 45px">
+        <h5>Unrivaled support</h5>
+
+        <br>
+        <p>
+            npm, Inc. has scaled the npm registry to over 11 million people worldwide. Let us bring our operational expertise to you with best-in-class support for the tool your developers depend on.
+        </p>
+
+
+    </div>
+    <div class=" text-center col-md-12">
+        <button class="btnfila8">Contact sales</button>
+    </div>
+
+</div>
+<div class="fila9">
+
+</div>
 </body>
 </html>
