--- a/01-http/Examen/examen/views/gestion/gAutor.ejs
+++ b/01-http/Examen/examen/views/gestion/gAutor.ejs
@@ -34,15 +34,23 @@
         </div>
         <div class="panel-body">
             <div class="col-md-8">
-                <div class="input-group col-md-10">
+                <div class="input-group ">
                     <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
                     <input id="email" type="text" class="form-control" name="email" placeholder="Escriba aquí....">
                 </div>
 
             </div>
-            <div class="col-md-2">
+            <div class="col-md-2 ">
+
+                <form action="">
                 <button class="btn btn-info">Busqueda</button>
-                <button class="btn btn-success pull-right">Crear</button>
+                </form>
+
+            </div>
+            <div class="col-md-2">
+                <form method="get" action="/api/crearAutor">
+                    <button class="btn btn-success pull-right">Crear</button>
+                </form>
             </div>
             <div class="col-md-12 separador"></div>
             <table class="table table-striped">
@@ -61,15 +69,19 @@
                         <td><%= autor.apellidos %></td>
                         <td><%= autor.fechaNacimiento %></td>
                         <td><%= autor.numeroLibros %></td>
-                        <td><%= autor.id %></td>
+                        <td><%= autor.ecuatoriano %></td>
                         <td>
 
                             <form action="/api/autores/eliminar"
                                   method="post">
-                                <input type="number"  name="id" value="<%=autor.id%>" >
-                                <button>Eliminar</button>
+                                <input type="number"  name="id" value="<%=autor.id%>" hidden >
+                                <button class="btn btn-danger">Eliminar</button>
                             </form>
 
+
+                        </td>
+                        <td>
+                            <button class="btn btn-info">Gestionar Hijos</button>
                         </td>
                     </tr>
                 <% }) %>
