--- a/01-http/Examen/examen/views/gestion/crearAutor.ejs
+++ b/01-http/Examen/examen/views/gestion/crearAutor.ejs
@@ -41,7 +41,7 @@
 
                 <div class="form-group">
                     <label for="apellidosId">Apellidos:</label>
-                    <input name="apellidos" type="password" class="form-control" id="apellidosId">
+                    <input name="apellidos" type="text" class="form-control" id="apellidosId">
                 </div>
                 <div class="form-group">
                     <label for="fechaId">Fecha nacimiento:</label>
@@ -54,7 +54,7 @@
                 <div class="form-group">
 
                     <label for="ecuatorianoId" class="checkbox-inline">
-                        <input id="ecuatorianoId" name="ecuatoriano" type="checkbox" value="">Ecuatoriano</label>
+                        <input id="ecuatorianoId" name="ecuatoriano" type="checkbox" >Ecuatoriano</label>
                 </div>
                 <button class="btn btn-success">Guardar</button>
 
