--- a/01-http/Examen/examen/views/gestion/gLibro.ejs
+++ b/01-http/Examen/examen/views/gestion/gLibro.ejs
@@ -38,9 +38,11 @@
                     <div class="input-group ">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
                         <input  id="email" type="text" class="form-control" name="nombre" placeholder="Escriba aquí....">
+
                     </div>
 
                 </div>
+                <input type="hidden" name="id" class="form-control" id="Id"  value="<%= id %>">
                 <div class="col-md-2 ">
 
 
