--- a/01-http/restaurante-proyecto/views/combos/vistaCombo.ejs
+++ b/01-http/restaurante-proyecto/views/combos/vistaCombo.ejs
@@ -12,7 +12,8 @@
     <title>Document</title>
 </head>
 <body>
-<div class="">
+<%- include('../componentes/menu/menu') %>
+<div class="container">
     <div class="panel panel-default">
         <div class="panel-heading">Combo nombre</div>
         <div class="panel-body">
@@ -27,38 +28,79 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <% arregloDisponibles.forEach((plato)=>{ %>
-                        <tr>
-                            <form action="/api/plato/editar" method="post">
+                    <% x = -1 %>
+                    <% arregloDisponibles.forEach((plato)=>{ x++ %>
+                    <tr>
+                        <form action="/api/combo/addPlato" method="post">
 
-                                <td><input id="nombreId" type="text" class="form-control" name="nombre"
-                                           value="<%= plato.nombre %>"></td>
-                                <td><input id="descripcionId" type="text" class="form-control" name="descripcion"
-                                           value="<%= plato.descripcion %>"></td>
-                                <td><input id="precioId" type="text" class="form-control" name="precio"
-                                           value="<%= plato.precio %>">
-                                    <input id="Id" type="hidden" class="form-control" name="id" value="<%= plato.id %>">
-                                </td>
+                            <td><input id="nombreId" type="text" class="form-control" name="nombre"
+                                       value="<%= plato.nombre %>"></td>
+                            <td><input id="descripcionId" type="text" class="form-control" name="descripcion"
+                                       value="<%= plato.descripcion %>"></td>
+                            <td><input id="precioId" type="text" class="form-control" name="precio"
+                                       value="<%= plato.precio %>">
+                                <input id="Id" type="hidden" class="form-control" name="id" value="<%= plato.id %>">
+                                <input id="Id" type="hidden" class="form-control" name="index" value="<%= x %>">
 
-                                <td>
-                                    <button class="btn btn-info">Editar</button>
-                                </td>
-                            </form>
-                            <td>
-                                <button class="btn btn-danger">Eliminar</button>
                             </td>
 
-                        </tr>
+                            <td>
+                                <button class="btn btn-success"><span class="glyphicon glyphicon-plus"></span></button>
+                            </td>
+                        </form>
+
+
+                    </tr>
                     <% }) %>
 
                     </tbody>
                 </table>
             </div>
             <div class="col-md-6">
+                <table class="table table-hover">
+                    <thead>
+                    <tr>
+                        <th>Nombre</th>
+                        <th>Descripción</th>
+                        <th>Precio</th>
+                        <th>Opciones</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <% x = -1 %>
+                    <% arregloSeleccionados.forEach((plato)=>{ x++ %>
+                    <tr>
+                        <form action="/api/combo/rmvPlato" method="post">
+
+                            <td><input id="nombreId" type="text" class="form-control" name="nombre"
+                                       value="<%= plato.nombre %>"></td>
+                            <td><input id="descripcionId" type="text" class="form-control" name="descripcion"
+                                       value="<%= plato.descripcion %>"></td>
+                            <td><input id="precioId" type="text" class="form-control" name="precio"
+                                       value="<%= plato.precio %>">
+                                <input id="Id" type="hidden" class="form-control" name="id" value="<%= plato.id %>">
+                                <input id="Id" type="hidden" class="form-control" name="index" value="<%= x %>">
+                            </td>
+                            <td>
+                                <button class="btn btn-danger"><span class="glyphicon glyphicon-minus"></span></button>
+                            </td>
+                        </form>
+
+
+                    </tr>
+                    <% }) %>
+
+                    </tbody>
+                </table>
 
             </div>
 
 
+        </div>
+        <div class="panel-footer">
+            <form action="/api/combo/guardarCombo" method="post">
+                <button class="btn btn-success">Guardar</button>
+            </form>
 
         </div>
     </div>
