--- a/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
+++ b/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
@@ -56,14 +56,17 @@
                                 <button class="btn btn-info">Editar</button>
                             </td>
                         </form>
-                        <form action="/api/combo/verCombo" method="post">
+                        <form action="/api/combo/verCombo/<%= plato.id %>/<%= plato.nombre %>" method="get">
                             <td>
-                                <input id=id type="hidden" class="form-control" name="platoId" value="<%= plato.id %>">
-                            <button class="btn btn-infor">ver combo</button>
+
+                                <button class="btn btn-infor">ver combo</button>
                             </td>
                         </form>
                         <td>
-                            <button class="btn btn-danger">Eliminar</button>
+                            <form action="/api/combo/eliminar" method="post">
+                                <input id="Id" type="hidden" class="form-control" name="id" value="<%= plato.id %>">
+                                <button class="btn btn-danger">Eliminar</button>
+                            </form>
                         </td>
 
                     </tr>
@@ -79,10 +82,10 @@
 
         <!-- Modal content-->
         <div class="modal-content modal-info">
-            <form action="/api/plato/crear" method="post">
+            <form action="/api/combo/crear" method="post">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
-                    <h4 class="modal-title">Registro de plato</h4>
+                    <h4 class="modal-title">Registro de combos</h4>
                 </div>
 
                 <div class="modal-body">
@@ -102,8 +105,9 @@
 
                 </div>
                 <div class="modal-footer">
-                    <button type="submit" class="btn btn-success" >Guardar</button>
+                    <button class="btn btn-success">GUARDAR</button>
                 </div>
+
             </form>
         </div>
 
