--- a/01-http/restaurante-proyecto/views/combos/vistaCombo.ejs
+++ b/01-http/restaurante-proyecto/views/combos/vistaCombo.ejs
@@ -15,7 +15,8 @@
 <%- include('../componentes/menu/menu') %>
 <div class="container">
     <div class="panel panel-default">
-        <div class="panel-heading">Combo nombre</div>
+        <div class="panel-heading">
+            <legend>Gestión de platos de <%= nombre%></legend></div>
         <div class="panel-body">
             <div class="col-md-6">
                 <table class="table table-hover">
@@ -97,12 +98,7 @@
 
 
         </div>
-        <div class="panel-footer">
-            <form action="/api/combo/guardarCombo" method="post">
-                <button class="btn btn-success">Guardar</button>
-            </form>
 
-        </div>
     </div>
 </div>
 
