--- a/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
+++ b/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
@@ -10,21 +10,32 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
     <title>Document</title>
+    <style>
+        #search {
+            height: 50px;
+        }
+    </style>
 </head>
 <body>
 <%- include('../componentes/menu/menu') %>
 <div class="container">
     <div class="panel panel-info ">
         <div class="panel-heading">
-            <legend>LISTA DE PLATOS</legend>
+            <legend>LISTA DE COMBOS</legend>
         </div>
         <div class="panel-body">
             <div class="col-md-10">
-                <div class="input-group">
+                <form action="/api/combo/buscar" method="post">
+                    <div class="input-group">
 
-                    <input id="email" type="text" class="form-control" name="email" placeholder="Búsqueda...">
-                    <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
-                </div>
+
+                            <input id="search" type="text" class="form-control" name="nombre" placeholder="Búsqueda...">
+
+                            <span class="input-group-addon"><i><button
+                                            class=" submit btn btn-default  btn-sm glyphicon glyphicon-search"></button></i></span>
+
+                    </div>
+                </form>
             </div>
             <div class="col-md-2">
                 <button class="btn btn-info" data-toggle="modal" data-target="#myModal">Nuevo</button>
@@ -96,7 +107,7 @@
                     </div>
                     <div class="form-group">
                         <label for="pwd">Precio:</label>
-                        <input type="password" class="form-control" name="precio" id="pwd">
+                        <input type="text" class="form-control" name="precio" id="pwd">
                     </div>
                     <div class="form-group">
                         <label for="comment">Descripción:</label>
