--- a/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
+++ b/01-http/restaurante-proyecto/views/combos/inicioCombo.ejs
@@ -107,7 +107,7 @@
                     </div>
                     <div class="form-group">
                         <label for="pwd">Precio:</label>
-                        <input type="text" class="form-control" name="precio" id="pwd">
+                        <input type="number" placeholder="0.00" required  min="0" value="0" step="0.01" class="form-control" class="form-control" name="precio" id="pwd">
                     </div>
                     <div class="form-group">
                         <label for="comment">Descripción:</label>
