--- a/01-http/Examen/examen/views/login/login.ejs
+++ b/01-http/Examen/examen/views/login/login.ejs
@@ -35,13 +35,14 @@
 <div class="col-md-12 principal">
     <div class="col-md-12 topes"></div>
     <div class="col-md-12 secundaria">
-        <form method="post" action="/api/entrar">
+        <form  action="/api/usuario/autenticando" method="post">
             <div class="form-group">
                 <label for="nombreUser">Nombre Usuario:</label>
                 <input type="text" class="form-control" id="nombreUser" placeholder="Ingrese su nombre de usuario" name="nombre">
+                <label for="passUser">Password:</label>
+                <input type="text" class="form-control" id="passUser" placeholder="Ingrese su contraseña" name="contrasenia">
             </div>
-
-            <button type="submit" class="btn btn-default">Submit</button>
+            <button type="submit" class="btn btn-default">Entrar</button>
         </form>
     </div>
     <div class="col-md-12 topes"></div>
