--- a/01-http/restaurante-proyecto/views/componentes/menu/menu.ejs
+++ b/01-http/restaurante-proyecto/views/componentes/menu/menu.ejs
@@ -12,15 +12,15 @@
     <title>Document</title>
 </head>
 <body>
-<nav class="navbar navbar-inverse">
+<nav class="navbar navbar-inverse" style="background-color:#98bfc6; color: black">
     <div class="container-fluid">
         <div class="navbar-header">
             <a class="navbar-brand" >Las delicias de Sofi</a>
         </div>
         <ul class="nav navbar-nav">
 
-            <li><a href="/api/plato/lista">Platos</a></li>
-            <li><a href="/api/combo/lista">Combos</a></li>
+            <li><a style="color: black" href="/api/plato/lista">Platos</a></li>
+            <li><a style="color: black" href="/api/combo/lista">Combos</a></li>
 
         </ul>
     </div>
