--- a/01-http/Examen/examen/views/cliente/menu_cliente.ejs
+++ b/01-http/Examen/examen/views/cliente/menu_cliente.ejs
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -92,6 +93,9 @@
             color: black;
             background-color: white;
         }
+        label{
+            color: white;
+        }
 
         .links{
             color: white;
@@ -99,6 +103,12 @@
 
         .links a{
             margin-left: 4px;
+        }
+        #espaciador{
+            height: 20vh;
+        }
+        .opciones{
+            width: 22vw;
         }
     </style>
     <title>Document</title>
@@ -108,43 +118,31 @@
     <div class="d-flex justify-content-center h-100">
         <div class="card">
             <div class="card-header">
-                <h3>Sign In</h3>
+                <h3>Ingreso</h3>
                 <div class="d-flex justify-content-end social_icon">
-                    <span><i class="fab fa-facebook-square"></i></span>
-                    <span><i class="fab fa-google-plus-square"></i></span>
-                    <span><i class="fab fa-twitter-square"></i></span>
+
                 </div>
             </div>
             <div class="card-body">
-                <form>
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-user"></i></span>
-                        </div>
-                        <input type="text" class="form-control" placeholder="username">
+                <div>
+                <form  action="/api/pedido/crearPedido" method="get">
 
-                    </div>
-                    <div class="input-group form-group">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text"><i class="fas fa-key"></i></span>
-                        </div>
-                        <input type="password" class="form-control" placeholder="password">
-                    </div>
-                    <div class="row align-items-center remember">
-                        <input type="checkbox">Remember Me
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Login" class="btn float-right login_btn">
-                    </div>
+                    <button type="submit" class="btn btn-default block opciones">Nuevo pedido</button>
                 </form>
+                </div>
+                <div id="espaciador">
+
+                </div>
+                <div>
+                    <form  action="/api/pedido/verPedidos" method="post">
+
+                        <button type="submit" class="btn btn-default block opciones">Ver pedidos</button>
+                    </form>
+                </div>
+
             </div>
             <div class="card-footer">
-                <div class="d-flex justify-content-center links">
-                    Don't have an account?<a href="#">Sign Up</a>
-                </div>
-                <div class="d-flex justify-content-center">
-                    <a href="#">Forgot your password?</a>
-                </div>
+
             </div>
         </div>
     </div>
