--- a/01-http/Examen/examen/views/cliente/pedido.ejs
+++ b/01-http/Examen/examen/views/cliente/pedido.ejs
@@ -25,12 +25,11 @@
 <script>
     var button = document.getElementById('mostrar'); // Assumes element with id='button'
 
-    button.onclick = function() {
+    button.onclick = function () {
         var div = document.getElementById('formPedido');
         if (div.style.display !== 'none') {
             div.style.display = 'none';
-        }
-        else {
+        } else {
             div.style.display = 'block';
         }
     };
@@ -56,7 +55,7 @@
             </div>
             <div class="col-md-6">
                 <label for="totalSin">Total sin impuestos:</label>
-                <input type="text" class="form-control" id="totalSin" name="totalSinImpuesto" value="<%= total%>">
+                <input type="text" class="form-control" id="totalSin" name="totalSinImpuesto" value="<%= total %>">
             </div>
             <div class="col-md-6">
                 <label for="totalCon">Total con impuestos:</label>
@@ -122,6 +121,16 @@
 <div class="panel-body">
     <div class="col-md-6">
         <legend>Articulos dispnibles</legend>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Seleccione un autor
+                <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <% listaAutores.forEach((autor)=>{ %>
+                    <li><a href="/api/pedido/realizarPedidos/<%=pedidoNuevo.ipPedido%>/<%=autor.id%>/<%=total%>"><%= autor.nombres %></a></li>
+                <% }) %>
+
+            </ul>
+        </div>
         <table class="table table-hover">
             <thead>
             <tr>
@@ -147,7 +156,8 @@
                         </td>
                         <td>
                             <input id="Id" type="hidden" class="form-control" name="id" value="<%= libro.id %>">
-                            <input id="idPedido" type="hidden" class="form-control" name="idPedido" value="<%= pedidoNuevo.ipPedido %>">
+                            <input id="idPedido" type="hidden" class="form-control" name="idPedido"
+                                   value="<%= pedidoNuevo.ipPedido %>">
 
                             <button type="submit" class="btn btn-default btn-sm">
                                 <span class="glyphicon glyphicon-plus"></span> Plus
