--- a/01-http/Examen/examen/views/login/login.ejs
+++ b/01-http/Examen/examen/views/login/login.ejs
@@ -1,3 +1,4 @@
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -5,47 +6,133 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <title>Document</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <!--Fontawesome CDN-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
+    <!--Custom styles-->
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
-        .principal{
-            padding: 4vh;
-            background-color: #dbfaff;
+        @import url('https://fonts.googleapis.com/css?family=Numans');
+
+        html,body{
+            background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
             background-size: cover;
-            height: 100vh;
+            background-repeat: no-repeat;
+            height: 100%;
+            font-family: 'Numans', sans-serif;
         }
-        .secundaria{
-            background-color: #6c6f6e;
-            padding-left: 10vw;
-            padding-right: 10vw;
-            padding-top: 10vh;
-            padding-bottom: 10vh;
-            height: 50vh;
 
+        .container{
+            height: 100%;
+            align-content: center;
+        }
+
+        .card{
+            height: 370px;
+            margin-top: auto;
+            margin-bottom: auto;
+            width: 400px;
+            background-color: rgba(0,0,0,0.5) !important;
+        }
+
+        .social_icon span{
+            font-size: 60px;
+            margin-left: 10px;
+            color: #FFC312;
+        }
+
+        .social_icon span:hover{
+            color: white;
+            cursor: pointer;
+        }
+
+        .card-header h3{
+            color: white;
+        }
+
+        .social_icon{
+            position: absolute;
+            right: 20px;
+            top: -45px;
+        }
+
+        .input-group-prepend span{
+            width: 50px;
+            background-color: #FFC312;
+            color: black;
+            border:0 !important;
+        }
+
+        input:focus{
+            outline: 0 0 0 0  !important;
+            box-shadow: 0 0 0 0 !important;
 
         }
-        .topes{
-            height: 25vh;
+
+        .remember{
+            color: white;
+        }
+
+        .remember input
+        {
+            width: 20px;
+            height: 20px;
+            margin-left: 15px;
+            margin-right: 5px;
+        }
+
+        .login_btn{
+            color: black;
+            background-color: #FFC312;
+            width: 100px;
+        }
+
+        .login_btn:hover{
+            color: black;
+            background-color: white;
+        }
+        label{
+            color: white;
+        }
+
+        .links{
+            color: white;
+        }
+
+        .links a{
+            margin-left: 4px;
         }
     </style>
+    <title>Document</title>
 </head>
 <body>
-<div class="col-md-12 principal">
-    <div class="col-md-12 topes"></div>
-    <div class="col-md-12 secundaria">
-        <form  action="/api/usuario/autenticando" method="post">
-            <div class="form-group">
-                <label for="nombreUser">Nombre Usuario:</label>
-                <input type="text" class="form-control" id="nombreUser" placeholder="Ingrese su nombre de usuario" name="nombre">
-                <label for="passUser">Password:</label>
-                <input type="text" class="form-control" id="passUser" placeholder="Ingrese su contraseña" name="contrasenia">
+<div class="container">
+    <div class="d-flex justify-content-center h-100">
+        <div class="card">
+            <div class="card-header">
+                <h3>Ingreso</h3>
+                <div class="d-flex justify-content-end social_icon">
+
+                </div>
             </div>
-            <button type="submit" class="btn btn-default">Entrar</button>
-        </form>
+            <div class="card-body">
+                <form  action="/api/usuario/autenticando" method="post">
+                    <div class="form-group">
+                        <label for="nombreUser">Nombre Usuario:</label>
+                        <input type="text" class="form-control" id="nombreUser" placeholder="Ingrese su nombre de usuario" name="nombre">
+                        <label for="passUser">Password:</label>
+                        <input type="text" class="form-control" id="passUser" placeholder="Ingrese su contraseña" name="contrasenia">
+                    </div>
+                    <button type="submit" class="btn btn-default">Entrar</button>
+                </form>
+            </div>
+            <div class="card-footer">
+
+            </div>
+        </div>
     </div>
-    <div class="col-md-12 topes"></div>
 </div>
 </body>
 </html>
